<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_op1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="opSelected"
                android:text="@string/_5_seconds" />

            <RadioButton
                android:id="@+id/rb_op2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="opSelected"
                android:text="@string/_10_seconds" />

            <RadioButton
                android:id="@+id/rb_op3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="opSelected"
                android:text="@string/_15_seconds" />

            <RadioButton
                android:id="@+id/rb_op4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="opSelected"
                android:text="@string/_20_seconds" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/timer_s_name"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:hint="@string/input_timer_s_name_here"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="btnStartClick"
                    android:text="@string/start"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/blue"/>

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear"
                    android:layout_marginHorizontal="10dp"
                    android:onClick="btnClearClick"
                    android:backgroundTint="@color/blue"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:lines="15"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:background="@drawable/border"
                android:layout_marginTop="10dp"/>
        </RadioGroup>

    </LinearLayout>

</RelativeLayout>